--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@calpoly/mustang": "^0.1.12",
-    "lit": "^3.1.3"
+    "lit": "^3.1.3",
+    "server": "^1.0.0"
   }
 }
